Testing layout modification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
 
         <h2>Table of Contents</h2>
         <ul>
-            <li>[Example page](example.md)
-            <li>[Dummy entry](example.md)
+            <li><a href="./example.md">Example page</a>
+            <li><a href="./example.md">Dummy entry(example.md</a>
         </ul>
 
         {% if site.github.is_project_page %}
